# attesta

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: classifiers.yaml  connectors.yaml  parsers.yaml  refresh_policies.yaml  rules.yaml  scoring_strategies.yaml  seed_parts.yaml  settings.yaml  signals.yaml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_step2_scoring.py
src/sourceloop/: __init__.py
src/sourceloop/cache/: confidence.py  refresh.py  store.py
src/sourceloop/classification/: base.py  chain.py
src/sourceloop/cli/: main.py
src/sourceloop/config/: loader.py  models.py
src/sourceloop/connectors/: base.py  digikey.py  mock.py  mouser.py  nexar.py  registry.py
src/sourceloop/db/: engine.py  partitioning.py  tables.py
src/sourceloop/domain/: bom.py  offer.py  part.py  plan.py  supplier.py
src/sourceloop/output/: json_renderer.py
src/sourceloop/parsing/: base.py  llm_repair.py  normalizer.py  orchestrator.py  (+3 more)
tests/: conftest.py
tests/integration/: test_e2e.py
tests/unit/: test_assembler_v2.py  test_cache.py  test_cache_store.py  test_classification.py  test_confidence_provider.py  test_connectors.py  test_connectors_registry.py  test_domain.py  test_fetch_mpn.py  test_llm_repair.py  test_nexar.py  test_output.py  test_parsers_extended.py  test_parsing.py  test_pipeline.py  test_repositories.py  test_scoring.py  test_scoring_engine_extended.py  test_sourcing.py  test_sourcing_service.py  test_tenant_isolation.py  test_warmup.py
(+43 files in other folders)
