[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sourceloop"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "python-magic>=0.4",
    "structlog>=24.0",
    "anthropic>=0.30",
    "PyYAML>=6.0",
    "click>=8.1",
]

[project.scripts]
sourceloop = "sourceloop.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
    "respx>=0.21",
    "testcontainers[postgres]>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sourceloop"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ""

[tool.coverage.run]
source = ["src/sourceloop"]
omit = ["src/sourceloop/cli/*"]
